# stealth-for-r3

./: CMakeLists.txt  README.md
cmake/: FindDirectX9.cmake  FindPluginSDK.cmake  FindRakHook.cmake  FindThemidaSDK.cmake
src/: main.cpp
src/Cheat/: Cheat.cpp  Cheat.h  Icons.h  KeyHook.cpp  KeyHook.h  MathStuff.h  Memory.cpp  Memory.h  Secure.cpp  Secure.h  Structs.h  Textures.cpp  Textures.h  Utils.cpp  Utils.h
src/Cheat/Config/: Config.cpp  Config.h
src/D3D/: D3DHook.cpp  D3DHook.h
src/Features/: Aimbot.cpp  Aimbot.h  Combat.cpp  Combat.h  Player.cpp  Player.h  Rainbow.cpp  Rainbow.h  Visuals.cpp  Visuals.h
src/Menu/: Menu.cpp  Menu.h
src/SAMP_disabled/: SAMP.cpp  SAMP.h
src/imgui/: imgui_custom.cpp  imgui_custom.h  imgui_render.cpp  imgui_render.h
